# magicHook

./: .gitignore  CMakeLists.txt  README.md
include/: Vector2.h
src/: Vector2.cpp  main.cpp
tests/: test_vector2.cpp
